--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,15 @@ dependencies:
   get: ^4.6.6
   flutter_keyboard_visibility: ^6.0.0
   firebase_core: ^3.2.0
+  google_sign_in: ^6.2.1
+  firebase_auth: ^5.1.2
+  cloud_firestore: ^5.1.0
+  flutter_easyloading: ^3.0.5
+  firebase_messaging: ^15.0.3
+  carousel_slider: ^4.2.1
+  cached_network_image: ^3.3.1
+
+
 
 dev_dependencies:
   flutter_test:
